<resources>
    <string name="app_name">learn-utils</string>
    <string name="mem_monitor_dialog_pss">PSS info</string>
    <string name="mem_monitor_dialog_total">Total info</string>
    <string name="mem_monitor_dialog_heap">Heap info</string>
    <string name="mem_monitor_unit">&lt;unit:&#160;M&gt;</string>
    <string name="mem_monitor_total_pss">PSS Total:&#160;&#160;</string>
    <string name="mem_monitor_dalvik_pss">PSS Dalvik:&#160;&#160;</string>
    <string name="mem_monitor_native_pss">PSS Native:&#160;&#160;</string>
    <string name="mem_monitor_other_pss">PSS Other:&#160;&#160;</string>
    <string name="mem_monitor_free_heap">Heap Free:&#160;&#160;</string>
    <string name="mem_monitor_total_heap">Heap Size:&#160;&#160;</string>
    <string name="mem_monitor_allocated_heap">Heap Alloc:&#160;&#160;</string>
    <string name="mem_monitor_avail_mem">Avail Mem:&#160;&#160;</string>
    <string name="mem_monitor_total_mem">Total Mem:&#160;&#160;</string>
    <string name="mem_monitor_is_low_mem">Low memory !</string>

    <string name="net_monitor_total">Net</string>
    <string name="net_monitor_receive_flow">RX:&#160;</string>
    <string name="net_monitor_send_flow">TX:&#160;</string>
    <string name="net_monitor_rate">Rate:&#160;</string>
    <string name="net_monitor_unit">&lt;unit:&#160;M&gt;</string>

    <string name="monitor_config_default">default</string>

    <string name="monitor_config_mem_title">内存</string>
    <string name="monitor_config_mem_default">default</string>
    <string name="monitor_config_mem_heap">Heap</string>
    <string name="monitor_config_mem_pss">PSS</string>
    <string name="monitor_config_mem_system">System</string>

    <string name="monitor_config_chart_title">图表</string>
    <string name="monitor_config_chart_default">default</string>
    <string name="monitor_config_chart_heap">Heap</string>
    <string name="monitor_config_chart_pss">PSS</string>

    <string name="monitor_config_net_title">网络</string>
    <string name="monitor_config_net_default">default</string>
    <string name="monitor_config_net_rx">RX</string>
    <string name="monitor_config_net_tx">TX</string>
    <string name="monitor_config_net_rate">Rate</string>




    <string name="monitor_config_confirm">确定</string>
    <string name="monitor_config_close">关闭</string>


</resources>
