<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/mem_monitor_total_pss_container"
        android:padding="2dp"
        android:orientation="horizontal">
        <TextView
            android:text="@string/mem_monitor_total_pss"
            android:textColor="#ffffff"
            android:textSize="12sp"
            android:id="@+id/mem_monitor_total_pss_title"
            android:layout_width="wrap_content"
            android:gravity="center"
            android:layout_height="wrap_content" />
        <TextView
            tools:text="0"
            android:textColor="#ffffff"
            android:textSize="12sp"
            android:ellipsize="end"
            android:maxLines="1"
            android:maxWidth="80dp"
            android:id="@+id/mem_monitor_total_pss_info"
            android:layout_width="wrap_content"
            android:gravity="center"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/mem_monitor_dalvik_pss_container"
        android:padding="2dp"
        android:orientation="horizontal">
        <TextView
            android:text="@string/mem_monitor_dalvik_pss"
            android:textColor="#ffffff"
            android:textSize="12sp"
            android:id="@+id/mem_monitor_dalvik_pss_title"
            android:layout_width="wrap_content"
            android:gravity="center"
            android:layout_height="wrap_content" />
        <TextView
            tools:text="0"
            android:textSize="12sp"
            android:textColor="#ffffff"
            android:ellipsize="end"
            android:maxLines="1"
            android:maxWidth="80dp"
            android:id="@+id/mem_monitor_dalvik_pss_info"
            android:layout_width="wrap_content"
            android:gravity="center"
            android:layout_height="wrap_content" />
    </LinearLayout>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/mem_monitor_native_pss_container"
        android:padding="2dp"
        android:orientation="horizontal">
        <TextView
            android:text="@string/mem_monitor_native_pss"
            android:textColor="#ffffff"
            android:textSize="12sp"
            android:id="@+id/mem_monitor_native_pss_title"
            android:layout_width="wrap_content"
            android:gravity="center"
            android:layout_height="wrap_content" />
        <TextView
            tools:text="0"
            android:textColor="#ffffff"
            android:textSize="12sp"
            android:ellipsize="end"
            android:maxLines="1"
            android:maxWidth="80dp"
            android:id="@+id/mem_monitor_native_pss_info"
            android:layout_width="wrap_content"
            android:gravity="center"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/mem_monitor_other_pss_container"
        android:padding="2dp"
        android:orientation="horizontal">
        <TextView
            android:text="@string/mem_monitor_other_pss"
            android:textColor="#ffffff"
            android:textSize="12sp"
            android:id="@+id/mem_monitor_other_pss_title"
            android:layout_width="wrap_content"
            android:gravity="center"
            android:layout_height="wrap_content" />
        <TextView
            tools:text="0"
            android:textColor="#ffffff"
            android:textSize="12sp"
            android:ellipsize="end"
            android:maxLines="1"
            android:maxWidth="80dp"
            android:id="@+id/mem_monitor_other_pss_info"
            android:layout_width="wrap_content"
            android:gravity="center"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/mem_monitor_total_heap_container"
        android:padding="2dp"
        android:orientation="horizontal">
        <TextView
            android:text="@string/mem_monitor_total_heap"
            android:textColor="#ffffff"
            android:textSize="12sp"
            android:id="@+id/mem_monitor_total_heap_title"
            android:layout_width="wrap_content"
            android:gravity="center"
            android:layout_height="wrap_content" />
        <TextView
            tools:text="0"
            android:textColor="#ffffff"
            android:textSize="12sp"
            android:ellipsize="end"
            android:maxLines="1"
            android:maxWidth="80dp"
            android:id="@+id/mem_monitor_total_heap_info"
            android:layout_width="wrap_content"
            android:gravity="center"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/mem_monitor_free_heap_container"
        android:padding="2dp"
        android:orientation="horizontal">
        <TextView
            android:text="@string/mem_monitor_free_heap"
            android:textColor="#ffffff"
            android:textSize="12sp"
            android:id="@+id/mem_monitor_free_heap_title"
            android:layout_width="wrap_content"
            android:gravity="center"
            android:layout_height="wrap_content" />
        <TextView
            tools:text="0"
            android:textColor="#ffffff"
            android:textSize="12sp"
            android:ellipsize="end"
            android:maxLines="1"
            android:maxWidth="80dp"
            android:id="@+id/mem_monitor_free_heap_info"
            android:layout_width="wrap_content"
            android:gravity="center"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/mem_monitor_allocated_heap_container"
        android:padding="2dp"
        android:orientation="horizontal">
        <TextView
            android:text="@string/mem_monitor_allocated_heap"
            android:textColor="#ffffff"
            android:textSize="12sp"
            android:id="@+id/mem_monitor_allocated_heap_title"
            android:layout_width="wrap_content"
            android:gravity="center"
            android:layout_height="wrap_content" />
        <TextView
            tools:text="0"
            android:textColor="#ffffff"
            android:textSize="12sp"
            android:ellipsize="end"
            android:maxLines="1"
            android:maxWidth="80dp"
            android:id="@+id/mem_monitor_allocated_heap_info"
            android:layout_width="wrap_content"
            android:gravity="center"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/mem_monitor_total_mem_container"
        android:padding="2dp"
        android:orientation="horizontal">
        <TextView
            android:text="@string/mem_monitor_total_mem"
            android:textColor="#ffffff"
            android:textSize="12sp"
            android:id="@+id/mem_monitor_total_mem_title"
            android:layout_width="wrap_content"
            android:gravity="center"
            android:layout_height="wrap_content" />
        <TextView
            tools:text="0"
            android:textColor="#ffffff"
            android:textSize="12sp"
            android:ellipsize="end"
            android:maxLines="1"
            android:maxWidth="80dp"
            android:id="@+id/mem_monitor_total_mem_info"
            android:layout_width="wrap_content"
            android:gravity="center"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/mem_monitor_avail_mem_container"
        android:padding="2dp"
        android:orientation="horizontal">
        <TextView
            android:text="@string/mem_monitor_avail_mem"
            android:textColor="#ffffff"
            android:textSize="12sp"
            android:id="@+id/mem_monitor_avail_mem_title"
            android:layout_width="wrap_content"
            android:gravity="center"
            android:layout_height="wrap_content" />
        <TextView
            tools:text="0"
            android:textColor="#ffffff"
            android:textSize="12sp"
            android:ellipsize="end"
            android:maxLines="1"
            android:maxWidth="80dp"
            android:id="@+id/mem_monitor_avail_mem_info"
            android:layout_width="wrap_content"
            android:gravity="center"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <TextView
        android:text="@string/mem_monitor_is_low_mem"
        android:textSize="12sp"
        android:textColor="#FFD81B2B"
        android:id="@+id/mem_monitor_is_low_mem_info"
        android:layout_width="wrap_content"
        android:gravity="center"
        android:layout_height="wrap_content"
        android:visibility="gone"/>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/net_monitor_tx_container"
        android:padding="2dp"
        android:orientation="horizontal">

        <TextView
            android:text="@string/net_monitor_send_flow"
            android:textColor="#acf1ee"
            android:textSize="12sp"
            android:id="@+id/net_monitor_send_flow_title"
            android:layout_width="wrap_content"
            android:gravity="center"
            android:layout_height="wrap_content" />

        <TextView
            tools:text="0"
            android:textColor="#acf1ee"
            android:textSize="12sp"
            android:ellipsize="end"
            android:maxLines="1"
            android:maxWidth="80dp"
            android:id="@+id/net_monitor_send_flow_info"
            android:layout_width="wrap_content"
            android:gravity="center"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/net_monitor_rx_container"
        android:padding="2dp"
        android:orientation="horizontal">

        <TextView
            android:text="@string/net_monitor_receive_flow"
            android:textColor="#acf1ee"
            android:textSize="12sp"
            android:id="@+id/net_monitor_receive_flow_title"
            android:layout_width="wrap_content"
            android:gravity="center"
            android:layout_height="wrap_content" />

        <TextView
            tools:text="0"
            android:textColor="#acf1ee"
            android:textSize="12sp"
            android:ellipsize="end"
            android:maxLines="1"
            android:maxWidth="80dp"
            android:id="@+id/net_monitor_receive_flow_info"
            android:layout_width="wrap_content"
            android:gravity="center"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/net_monitor_rate_container"
        android:padding="2dp"
        android:orientation="horizontal">
        <TextView
            android:text="@string/net_monitor_rate"
            android:textColor="#acf1ee"
            android:textSize="12sp"
            android:id="@+id/net_monitor_rate_title"
            android:layout_width="wrap_content"
            android:gravity="center"
            android:layout_height="wrap_content" />
        <TextView
            tools:text="0"
            android:textColor="#acf1ee"
            android:textSize="12sp"
            android:ellipsize="end"
            android:maxLines="1"
            android:maxWidth="80dp"
            android:id="@+id/net_monitor_rate_info"
            android:layout_width="wrap_content"
            android:gravity="center"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/cpu_monitor_percentage_container"
        android:padding="2dp"
        android:orientation="horizontal">
        <TextView
            android:text="@string/cpu_monitor_percentage"
            android:textColor="#a3f593"
            android:textSize="12sp"
            android:id="@+id/cpu_monitor_percentage"
            android:layout_width="wrap_content"
            android:gravity="center"
            android:layout_height="wrap_content" />
        <TextView
            tools:text="0"
            android:textColor="#a3f593"
            android:textSize="12sp"
            android:ellipsize="end"
            android:maxLines="1"
            android:maxWidth="80dp"
            android:id="@+id/cpu_monitor_percentage_info"
            android:layout_width="wrap_content"
            android:gravity="center"
            android:layout_height="wrap_content" />
    </LinearLayout>
</LinearLayout>