<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="150dp"
    android:layout_height="wrap_content"
    android:background="#56bfbfbf"
    android:paddingStart="10dp"
    android:paddingLeft="10dp"
    android:paddingRight="5dp"
    android:paddingEnd="5dp"
    android:paddingTop="10dp"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:text="@string/net_monitor_send_flow"
        android:textSize="12sp"
        android:id="@+id/net_monitor_send_flow_title"
        android:layout_width="wrap_content"
        android:gravity="center"
        android:layout_height="wrap_content" />

    <TextView
        tools:text="0"
        android:textSize="12sp"
        android:ellipsize="end"
        android:maxLines="1"
        android:maxWidth="80dp"
        android:id="@+id/net_monitor_send_flow_info"
        app:layout_constraintLeft_toRightOf="@+id/net_monitor_send_flow_title"
        android:layout_width="wrap_content"
        android:gravity="center"
        android:layout_height="wrap_content" />

    <TextView
        android:text="@string/net_monitor_receive_flow"
        android:textSize="12sp"
        android:id="@+id/net_monitor_receive_flow_title"
        app:layout_constraintTop_toBottomOf="@+id/net_monitor_send_flow_title"
        android:layout_width="wrap_content"
        android:gravity="center"
        android:layout_height="wrap_content" />

    <TextView
        tools:text="0"
        android:textSize="12sp"
        android:ellipsize="end"
        android:maxLines="1"
        android:maxWidth="80dp"
        android:id="@+id/net_monitor_receive_flow_info"
        app:layout_constraintLeft_toRightOf="@+id/net_monitor_receive_flow_title"
        app:layout_constraintTop_toBottomOf="@id/net_monitor_send_flow_info"
        android:layout_width="wrap_content"
        android:gravity="center"
        android:layout_height="wrap_content" />

    <TextView
        android:text="@string/mem_monitor_unit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="10dp"
        android:paddingRight="0dp"
        android:paddingEnd="0dp"
        android:paddingTop="10dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/net_monitor_receive_flow_info"
        android:paddingStart="10dp" />

</android.support.constraint.ConstraintLayout>