<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <android.support.constraint.ConstraintLayout
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:id="@+id/net_monitor_tx_container">

        <TextView
            android:text="@string/net_monitor_send_flow"
            android:textColor="#ffffff"
            android:textSize="12sp"
            android:id="@+id/net_monitor_send_flow_title"
            android:layout_width="wrap_content"
            android:gravity="center"
            android:layout_height="wrap_content" />

        <TextView
            tools:text="0"
            android:textColor="#ffffff"
            android:textSize="12sp"
            android:ellipsize="end"
            android:maxLines="1"
            android:maxWidth="80dp"
            android:id="@+id/net_monitor_send_flow_info"
            app:layout_constraintLeft_toRightOf="@+id/net_monitor_send_flow_title"
            android:layout_width="wrap_content"
            android:gravity="center"
            android:layout_height="wrap_content" />

    </android.support.constraint.ConstraintLayout>

    <android.support.constraint.ConstraintLayout
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:id="@+id/net_monitor_rx_container"
        app:layout_constraintTop_toBottomOf="@+id/net_monitor_tx_container">

        <TextView
            android:text="@string/net_monitor_receive_flow"
            android:textColor="#ffffff"
            android:textSize="12sp"
            android:id="@+id/net_monitor_receive_flow_title"
            android:layout_width="wrap_content"
            android:gravity="center"
            android:layout_height="wrap_content" />

        <TextView
            tools:text="0"
            android:textColor="#ffffff"
            android:textSize="12sp"
            android:ellipsize="end"
            android:maxLines="1"
            android:maxWidth="80dp"
            android:id="@+id/net_monitor_receive_flow_info"
            app:layout_constraintLeft_toRightOf="@+id/net_monitor_receive_flow_title"
            android:layout_width="wrap_content"
            android:gravity="center"
            android:layout_height="wrap_content" />

    </android.support.constraint.ConstraintLayout>


    <android.support.constraint.ConstraintLayout
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:id="@+id/net_monitor_rate_container"
        app:layout_constraintTop_toBottomOf="@+id/net_monitor_rx_container">

        <TextView
            android:text="@string/net_monitor_rate"
            android:textColor="#ffffff"
            android:textSize="12sp"
            android:id="@+id/net_monitor_rate_title"
            android:layout_width="wrap_content"
            android:gravity="center"
            android:layout_height="wrap_content" />

        <TextView
            tools:text="0"
            android:textColor="#ffffff"
            android:textSize="12sp"
            android:ellipsize="end"
            android:maxLines="1"
            android:maxWidth="80dp"
            android:id="@+id/net_monitor_rate_info"
            android:layout_width="wrap_content"
            app:layout_constraintLeft_toRightOf="@id/net_monitor_rate_title"
            android:gravity="center"
            android:layout_height="wrap_content" />

    </android.support.constraint.ConstraintLayout>

</merge>